--- a/info.html
+++ b/info.html
@@ -239,6 +239,12 @@
   width: 100%;
   position: relative;
 }
+  .title-box .left{
+  position: absolute;
+  top: 60%;
+  left: 10px;
+  transform: translateY(-50%);
+}
 .center {
   position: absolute;
   left: 50%;
